--- a/src/css/olddapp.css
+++ b/src/css/olddapp.css
@@ -738,7 +738,6 @@ z-index: -1;
 	  /* height: calc(100% - 90px)!important; */
 	  overflow: hidden;
 	  overflow-y: scroll;
-	  width: 100vw;
 	  /* touch-action: pan-y!important; */
 
 
@@ -1530,13 +1529,13 @@ body.swal2-height-auto {
 }
 
 #cwContacts{
-  /* overflow-y: scroll; */
+  overflow-y: scroll;
   height: 100%;
   position: relative;
   display: flex;
   padding-bottom: 60px;
   flex-direction: column;
-  /* width: 97%; */
+  width: 97%;
 
 }
 
